# GarcoldERP

./: Procfile  nixpacks.toml  pyproject.toml
app/: app_containers.py  main.py
app/core/: logger.py  realtime.py  settings.py
app/core/security/: _auth_helpers.py  deps.py  jwt.py  realtime_auth.py
app/storage/cloud_storage/: __init__.py  r2_client.py  service.py  types.py
app/storage/database/: __init__.py  db_connector.py
app/utils/: pdf_renderer.py  tx.py
app/utils/database/: __init__.py  db_connector.py  test_supabase_conn.py
app/v1_0/: v1_containers.py  v1_router.py
app/v1_0/entities/: __init__.py  auth_DTO.py  bank_DTO.py  company_DTO.py  costumer_DTO.py  dashboard_DTO.py  expense_DTO.py  expense_categoryDTO.py  investment_DTO.py  loan_DTO.py  page.py  product_DTO.py  profit_DTO.py  profit_itemDTO.py  purchase_DTO.py  purchase_itemDTO.py  purchase_paymentDTO.py  sale_DTO.py  sale_invoiceDTO.py  sale_itemDTO.py  sale_paymentDTO.py  status_DTO.py  supplier_DTO.py  transaction_DTO.py  user_DTO.py
app/v1_0/models/: __init__.py  bank.py  bank_transaction.py  base.py  company.py  customer.py  expense.py  expense_category.py  investment.py  loan.py  media.py  permission.py  product.py  profit.py  profit_item.py  purchase.py  purchase_item.py  purchase_payment.py  role.py  role_permission.py  sale.py  sale_item.py  sale_payment.py  status.py  supplier.py  transaction.py  transaction_type.py  user.py  users.py
app/v1_0/repositories/: __init__.py  bank_repository.py  base_repository.py  company_repository.py  customer_repository.py  expense_category_repository.py  expense_cateogry_repository.py  expense_repository.py  investment_repository.py  loan_repository.py  media_repository.py  paginated.py  permission_repository.py  product_repository.py  profit_item_repository.py  profit_repository.py  (+13 more)
(+93 files in other folders)
