[project]
name = "garcold-erp-api"
version = "0.1.0"
description = "Garcold ERP backend"
authors = [
    {name = "Daniel Garcia Osorio"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "dependency-injector[yaml] (>=4.48.2,<5.0.0)",
    "httplib2 (>=0.31.0,<0.32.0)",
    "fastapi[all] (>=0.118.2,<0.119.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "supabase (>=2.22.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
