[tool.poetry]
name = "garcold-erp-api"
version = "0.1.0"
description = "Garcold ERP backend"
authors = ["Daniel Garcia Osorio"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.118.2"
uvicorn = { version = "^0.37.0", extras = ["standard"] }
sqlalchemy = { version = ">=2.0.43,<3.0.0", extras = ["asyncio"] }
asyncpg = ">=0.30.0,<0.31.0"
pydantic = ">=2.12.0,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
dependency-injector = { version = ">=4.48.2,<5.0.0", extras = ["yaml"] }
colorlog = ">=6.9.0,<7.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
supabase = ">=2.22.0,<3.0.0"
certifi = "*"
truststore = ">=0.10.4,<0.11.0"
boto3 = ">=1.40.52,<2.0.0"
pandas = ">=2.2,<3.0.0"
openpyxl = ">=3.1.5,<4.0.0"
python-jose = { version = ">=3.5.0,<4.0.0", extras = ["cryptography"] }
httpx = ">=0.28.1,<0.29.0"
playwright = ">=1.55.0,<2.0.0"
httplib2 = ">=0.31.0,<0.32.0"
email-validator = "^2.2"
filetype = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
